--- a/gradle.properties
+++ b/gradle.properties
@@ -8,9 +8,9 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.14.6
 
 # Mod Properties
-	mod_version = 1.0.0
-	maven_group = com.example
-	archives_base_name = fabric-example-mod
+	mod_version = 0.4.0
+	maven_group = dev.venomcode
+	archives_base_name = vanillifylib
 
 # Dependencies
 	fabric_version=0.55.1+1.19
